test/extern/bradc/vars/externParams.good
externParams.chpl:1: error: external params are not supported
