test/extern/bradc/vars/externParams.chpl
extern param OPTION_ONE:int(32);
extern param OPTION_TWO:int(32);

writeln(OPTION_ONE, OPTION_TWO);
